--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,105 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+header{
+  height: 350px;
+  width: 100%;
+  background-image: url("../images/bgtile.png");
+  position: absolute;
+}
+
+.phone-image {
+  position: absolute;
+  height: 515px;
+  width: 320px;
+  top: 17%;
+  left: 25%;
+}
+
+.brand{
+  position: absolute;
+  top: 16%;
+  left: 45%;
+}
+
+.home {
+  position: absolute;
+  color: white;
+  top: 18%;
+  left: 66%;
+  width: 105px;
+  height: 35px;
+  background-color: #1c5380;
+  border: 1px solid #06365f;
+  line-height: 20%;
+}
+
+.home p {
+  display: inline-block;
+  font-weight: 700;
+  padding: auto;
+  text-align: center;
+  padding: 3px 0;
+}
+
+.home img {
+  float: left;
+  padding: 9px 8px;
+}
+
+.main-text-box {
+  height: 500px;
+  width: 500px;
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  position: absolute;
+  top: 25%;
+  left: 45%;
+}
+
+.main-text {
+  padding: 40px 40px 0 40px;
+}
+
+.main-text h2 {
+  color: #06365f;
+  width: 300px;
+}
+
+.button-apple {
+  float: left;
+  padding: 10px 40px;
+}
+.button-google {
+  float: left;
+  padding: 10px 0;
+}
+
+.list {
+  margin: 0 15%;  
+  color: #1c5380;
+  list-style-type: none;
+  clear: both;
+  text-transform: uppercase;
+  font-weight: 700;
+  padding-bottom: 20px;
+  position: absolute;
+  top: 80%;
+  left: 13%;
+
+}
+
+.list li{
+  text-align: center;
+  float: left;
+  margin: auto;
+  font-size: 16px;
+  padding: 0 5px;
+}
+
+.list .trademark {
+  color: darkgrey;
+  width: 155px;
+  font-size: 16px;
+}
