--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,91 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.cabecera{
+  background-image:url(../images/bgtile.png);
+  width: 1280px;
+  height:250px;
+  position: absolute;
+}
+
+.telefonos{
+  position:relative;
+  float:left;
+  margin-top:78px;
+  margin-left:133px;
+}
+
+.logo{
+  float: left;
+  position: relative;
+  margin-top:99px;
+  margin-left:48px;
+}
+
+.logotipo{
+  float: left;
+  position: relative;
+}
+
+.login{
+  float:left;
+  position: relative;
+  border:2px solid #06365f;
+  background-color: #1c5380;
+  margin-top:17px;
+  margin-left:68px;
+  color:white;
+  font-weight: bold;
+  padding:8px;
+  border-radius: 4px;
+}
+.loginhome{
+  vertical-align: middle;
+  margin-right: 12px;
+  
+}
+#recuadro{
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+  width: 464px;
+  height:368px;
+  color:black;
+  float: left;
+  position: relative;
+  margin-top:12px;
+  margin-left:48px;
+  border-radius: 12px;
+  padding-left: 24px;
+}
+h2{
+  color:#06365f;
+}
+p{
+  padding-right:36px;
+}
+
+.negrita{
+  font-weight:700;
+}
+.logogoogle{
+  margin-left: 20px;
+}
+#footer{
+  float:clear;
+  position: absolute;
+  margin-top:650px;
+  margin-left:272px;
+
+}
+#footer a{
+  margin-right:15px;
+  text-transform: uppercase;
+  text-decoration: none;
+  color:#1c5380;
+  font-weight: 600;
+  font-size: 0.9rem;
+}
+.copy{
+  color:grey;
+}
