--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,188 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+html{
+  box-sizing: border-box;
+}
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+
+ .top{
+  background-image: url(../images/bgtile.png);
+  height: 400px;
+  width:100%;
+}
+
+.bottom {
+  
+  width:100%;
+  height:200px; 
+  position: relative;
+}
+
+.common {
+  /* background-color: red; */
+  margin: 0 15% 0 15%;
+  width:70%;
+  height:100%;
+  position: absolute;
+  top:-280px; 
+  
+ 
+  
+}
+
+.phones{
+  width:45%;
+  /* background-color: green; */
+  height:100%;
+  float:left;
+  margin-right: 5%; 
+  /* background-image: url("../images/phones.png");
+  background-repeat: no-repeat;
+  background-size: 100%; */
+
+}
+
+.phones img{
+  width:75%;
+  height:auto;
+}
+
+.loggin-text{
+  width:50%;
+  /* background-color:white; */
+  height:100%;
+  float:left;
+  /* padding:5%; */
+  /* border: 1px solid yellow; */
+
+  
+}
+
+/* .text div {
+  background-color: white;
+} */
+
+
+.brand{
+  
+  float: left;
+  /* border:1px solid red; */
+  margin-right:10%; 
+}
+
+.brand img{
+  max-width:100%;
+  height:auto;
+  /* border: 1px solid blue; */
+}
+
+.text-h2{
+  clear: both;
+  /* height:250px; */
+  
+  background-color: white;  
+  
+  /* padding:10% 10% 10% 10%;  */
+   padding:10% 0 0 10%; 
+}
+
+.loggin {
+  position: relative;
+  width:100%; 
+  height:89px;
+  /* border: 1px soid green;
+  background-color: green; */
+}
+
+button{
+  width:100px;
+  /* margin:20px 0 20px 20px; */
+  background-image: url("../images/home.png");
+  background-color:	 #0086b3;
+  padding:10px;
+  background-repeat: no-repeat;
+  height:40px;
+  background-position-y: center;
+  background-position-x: 8px;
+  border: 1px solid #0099cc ;
+  /* position: absolute; */
+  /* top:20px; */
+  /* float:right; */
+  /* margin-right: 10px; */
+  color:white;
+  font-weight: bold;
+  text-align: right;
+  box-shadow: 2px 2px 2px #0086b3;
+  
+}
+
+.button-div{
+  position: absolute;
+  right: 15px; 
+  top:20px;
+  /* float: right;  */
+  /* border:1px solid pink; */
+}
+
+.apple-google-text {
+  
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position-y:20px;
+  opacity: 0%;
+  
+  /* background-clip: content-box; */
+}
+
+#text{
+  padding:0 0 0 10%;
+}
+
+.apple-google-text img{
+  padding:10% 0 0 10%;
+}
+
+
+
+#title h2 {
+  padding:15% 0 0 10%;
+  color:#06365f;
+ 
+}
+
+ /* .apple-google-text h2{
+  background-color: white;
+  
+  opacity:70%;
+  height:92px;
+}  */
+
+
+footer {
+  position: fixed;
+  bottom:50px;
+  
+  width:100%;
+}
+footer div{
+  
+  width:80%;
+  margin: 0 auto;
+  text-align: center;
+
+}
+
+span {
+  margin:15px;
+  text-transform: uppercase;
+  color:#06365f;
+  font-weight: bold;
+  font-size: 14px;
 }
