--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,98 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
+
+/* General */
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+
+/* Header */
+
+.header {
+  background-image: linear-gradient(to top, #1c5380, #568cb9);
+  height: 400px;
+  position: relative;
+}
+
+
+.phones {
+  float: left;
+  margin-left: 10%;
+  margin-top: 10%;
+}
+
+.logo {
+  position: absolute;
+  left: 35%;
+  top: 55%;
+ 
+
+}
+
+
+.btn {
+  width: 100px;
+  background-image: linear-gradient(to top, #1c5380, #568cb9);
+  border-radius: 3px;
+  box-shadow: 5px solid rgba(0, 0, 0, 0.6);
+  border: none;
+  color: white;
+  font-size: 14px;
+  text-align: center;
+  padding: 0.5em;
+  position: absolute;
+  float: right;
+  right: 20%;
+  top: 60%;
+}
+
+
+/* Box  */
+
+.box {
+  background-image: url("../images/frame.png");
+  background-size: cover;
+  width: 660px;
+  height: 400px;
+  float: right;
+  margin-right: 20%;
+  margin-top: -5%;
+  position: relative;
+  padding: 3em 3em;
+}
+
+.box h2 {
+  color: #06365f;
+}
+
+
+/* Footer */
+
+.footer {
+  position: absolute;
+  bottom: 10px;
+  width: 50%;
+  margin: auto 30%;
+ 
+}
+
+.footer a {
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 10px;
+  color: #06365f;
+  font-weight: bold; 
+  line-height: 1em;
+  vertical-align: baseline;
+  
+}
+
+.footer h5 {
+  float: right;
+  color: gray;
+  line-height: 1em;
+  vertical-align: baseline;
+}
+
+
