--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,20 +7,23 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("/Users/victorgarcia/Desktop/IH/dia3/lab-css-instagram-clone/starter-code/images/bgtile.png");
+  background-repeat: repeat-x;
+  }
+  
 }
-
 .header-img{
-
+  background-repeat: repeat-x;
 }
 
 .iphone{
+  position: relative;
+  left:100px;
+  top: 100px;
 
+  float: left;
 }
 
-.logo{
-
-}
-
-.log-in{
+.text{
   
 }
