--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -5,7 +5,7 @@ light blue: #1c5380
 */
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  
   margin: 0;
   background-image: url("/Users/victorgarcia/Desktop/IH/dia3/lab-css-instagram-clone/starter-code/images/bgtile.png");
   background-repeat: repeat-x;
@@ -26,16 +26,19 @@ body {
 .log-in{
   background-color: #1c5380;
   border-color: #06365f;
+  border-radius: 3px;
   color: white;
   position: relative;
   right: -100px;
   bottom: 30px;
+
 }
 .right-box{
   position: relative;
   left:200px;
   top: 100px; 
   font-size: 16px;
+  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .text-box{
@@ -45,11 +48,7 @@ body {
   width:400px;
 }
 
-.footer{
-  position: relative;
-  top:-250px;
-  right: -400px;
-}
+
 
 .h2{
   color: #06365f;
@@ -62,7 +61,19 @@ body {
 .button{
   display: inline;
 }
-
+.footer{
+  position: relative;
+  top:-250px;
+  right: -320px;
+}
 .link{
-  
+  text-decoration:none;
+  color:#1c5380;
+  text-transform: uppercase;
+  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: bold;
+  padding-right: 25px;
+}
+.copy{
+  color:grey;
 }
