--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -6,5 +6,86 @@ light blue: #1c5380
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  margin: 0 auto;
+}
+
+.main-content{
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  background-image: url('../images/bgtile.png');
+  background-repeat: repeat-x;
+}
+
+
+.phones {
+  position: absolute;
+  top: 100px;
+  left: 100px;
+}
+
+.downloads{
+  position: relative;
+  top: 470px;
+  left: 550px;
+}
+
+.login {
+  position: absolute;
+  top: 110px;
+  left: 890px;
+}
+
+.content{
+  position: absolute;
+  top: 200px;
+  left: 500px;
+  background-image: url('../images/frame.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 400px;
+  padding: 10px 50px 20px 50px;
+}
+
+.second-content{
+  position: absolute;
+}
+
+.brand{
+  position: relative;
+  top: 100px;
+  left: 500px;
+}
+
+.list>li{
+  display: inline-block;
+  text-transform: uppercase;
+  color: #3f729b;
+  font-weight: bold;
+}
+
+.list{
+  text-align: center;
+}
+
+.login {
+  width: 100px;
+  background-color: #3f729b;
+  border: 1px solid lightgray;
+  border-radius: 3px;
+}
+
+.login_title{
+  position: absolute;
+  top: 5px;
+  left: 40px;
+  color: white;
+}
+
+.login_img{
+  margin: 5px;
+}
+
+.content-title h2{
+  color: #3f729b;
 }
