--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,72 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.blue {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 300px;
+  margin: 0 auto;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-y;
+  background-size: 100% 100px;
+  z-index: -1000;
+}
+
+.container {
+  padding-top: 100px;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.float {
+  float:left;
+}
+
+.login {
+  border: 1px solid;
+  border-color: blue;
+  border-radius: 10px;
+  margin: 10px 20px 0 0;
+  padding: 10px 30px;
+  color: white;
+  float: right;
+}
+
+.big {
+  padding-right: 50px;
+  width: 40%;
+  box-sizing: border-box;
+}
+
+.content {
+  width: 50%;
+  box-sizing: border-box;
+}
+
+header {
+}
+
+main {
+  padding: 20px 20px 0 40px;
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: content;
+}
+
+h2 {  
+  width: 60%;
+  color: #082F56;
+}
+
+nav li {
+  text-transform: uppercase;
+  float:left;
+}
+
+.clearfix {
+  clear:both;
+}
+
