--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,86 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+.clearfix {
+  clear: both
+}
+
+.phone-image{
+  float: left;
+  width: 50%;
+  padding: 80px 10px 10px 220px;
+  box-sizing: border-box;
+}
+
+header{
+  float:left;
+}
+
+.frame{
+  float: left;
+  width: 40%;
+  padding: 10px 100px 10px 30px;
+  box-sizing: border-box;
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+}
+
+.login-button{
+  float: left;
+  color: white;
+  border: 1px solid;
+  border-color: rgba(3,2,25,0.6);
+  background-color: #4e7da3;
+  padding: 5px 10px;
+  font-weight: bold;
+  cursor: pointer;
+  border-radius: 8px;
+  margin-top: 120px;
+  margin-left: 85px;
+}
+
+.frame h2{
+  line-height: 40%;
+}
+
+.instagram-logo{
+  float: left;
+  
+  padding-top: 100px;
+}
+
+footer{
+  color: #1c5380;
+  font-weight: bold;
+}
+
+footer ul{
+  text-align: center;
+  padding-left: 270px;
+}
+
+footer li{
+  list-style: none;
+  float: left;
+  margin: 0 20px;
+  padding-bottom: 20px;
+  cursor: pointer;
+
+}
+
+.download-logos{
+  float: left;
+  padding-top: 30px;
+  padding-left: 70px;
+  cursor: pointer;
+
+}
+
+#copyright{
+  color:grey;
+  font-weight: bold;
 }
